--- a/RaftVRMod/RaftVRMod/Properties/Resources.resx
+++ b/RaftVRMod/RaftVRMod/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="actions" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Patching\Bindings\actions.json;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="animclips" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\animclips;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="AudioPluginOculusSpatializer" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Patching\Assemblies\AudioPluginOculusSpatializer.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
